--- a/WidgetExplorer/app/src/main/AndroidManifest.xml
+++ b/WidgetExplorer/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".RadioButtonActivity"></activity>
+        <activity android:name=".ProgresbarActivity"></activity>
+        <activity android:name=".RadioButtonActivity" />
         <activity android:name=".CheckboxActivity" />
         <activity android:name=".SwitchActivity" />
         <activity android:name=".ButtonActivity" />
